@@ -8,9 +8,16 @@ use inc::Module::Install;
 # Definition.
 abstract 'GraphViz output for PYX handling.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.07;
+author_requires 'Test::More' => 0;
+author_requires 'Test::NoWarnings' => 0;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'PYX-GraphViz';
 readme_from 'lib/PYX/GraphViz.pm';
+recursive_author_tests('xt');
 requires 'Class::Utils' => 0.05;
 requires 'Error::Pure' => 0.15;
 requires 'GraphViz' => 0;
@@ -21,11 +28,8 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 resources 'homepage' => 'https://github.com/tupinek/PYX-GraphViz';
 resources 'repository' => 'git://github.com/tupinek/PYX-GraphViz';
 test_requires 'English' => 0;
-test_requires 'File::Object' => 0.07;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.04';
 
